# Advanced-Techniques-in-Chess-Engines

./: .dockerignore  .gitignore  AGENTS.md  Chess Pieces.url  Chess.spec  Defines.py  README.md  Training from Pretrained - Fail.txt  getting_started.sh  plan.md  play.ipynb  play.py  requirements.txt  ruff.toml  training.ipynb
AI-ZeroChessBot/: AlphaMCTS.py  README.md  mcts.py
AIZeroChessBot/: AlphaMCTSBot.py  AlphaZero.py  BoardEncoding.py  Network.py  README.md  SelfPlay.py  SelfPlayGame.py  __main__.py  util.py
AIZeroChessBot-C++/: .clang-format  .gitignore  CMakeLists.txt  README.md  check.py  environment.yaml  setup_build.bat  setup_build.sh
AIZeroChessBot-C++/documentation/: benchmark_results.md
AIZeroChessBot-C++/documentation/chess/: README.md
AIZeroChessBot-C++/documentation/chess/benchmark/: benchmark.hpp
AIZeroChessBot-C++/documentation/encodings/: README.md  check.py
AIZeroChessBot-C++/documentation/parallelization/: README.md  SelfPlay.md  Training.md
AIZeroChessBot-C++/documentation/pretraining/: README.md
AIZeroChessBot-C++/eval/: CMakeLists.txt  eval.ipynb  eval_setup_build.sh
AIZeroChessBot-C++/src/: AlphaMCTSNode.hpp  AlphaZero.hpp  AlphaZeroBase.hpp  AlphaZeroSelfPlayer.hpp  AlphaZeroTrainer.hpp  Barrier.hpp  BoardEncoding.hpp  Dataset.hpp  Log.hpp  MoveEncoding.cpp  MoveEncoding.hpp  Network.hpp  PreprocessGenerationData.py  SelfPlay.hpp  SelfPlayGame.hpp  SelfPlayWriter.hpp  Stockfish.hpp  StockfishDataGenerator.hpp  Subprocess.hpp  Time.hpp  TrainingArgs.hpp  TrainingStats.hpp  chess.hpp  common.hpp  eval.cpp  main.cpp
AIZeroChessBot-C++/src/Engine/Board/: Board.h  Coord.h  GameState.h  Move.h  Piece.h  PieceList.h  Zobrist.h
AIZeroChessBot-C++/src/Engine/Helpers/: BoardHelper.h  MoveUtility.h
AIZeroChessBot-C++/src/Engine/Move Generation/: MoveGenerator.h  PrecomputedMoveData.h
AIZeroChessBot-C++/src/Engine/Move Generation/Bitboards/: BitBoardUtility.h  Bits.h
AIZeroChessBot-C++/src/Engine/Move Generation/Magics/: Magic.h  MagicHelper.h  PrecomputedMagics.h
AIZeroChessBot-C++/train/: CMakeLists.txt  communicator.py  data_generator.sh  eval.ipynb  eval_setup_build.sh  multinode_test.py  multinode_test.sh  sbatch_train.sh  train.sh  train_test.sh
AIZeroConnect4Bot/: 9_alphaparallel.py  README.md  aio_pipe_test.py  asyncio_pipe_test.py  eval.py  main.py  opt.py  opt.sh  requirements.txt  settings.py  setup.sh  test.py  test_train.sh  train.py  train.sh
C++/: C++ChessBot.sln
Framework/: BitboardHelper.py  ChessBot.py  ChessGUI.py  ExtendedMove.py  GameManager.py  GameResult.py  README.md  Tournament.py  __init__.py  __main__.py  main.py
HandcraftedChessBot/: HandcraftedBotV1.py  HandcraftedBotV2.py  HandcraftedBotV3.py  HandcraftedBotV4.py  README.md  __main__.py
NeuralNetChessBot/: README.md  play.ipynb
Python/: Chess.py  requirements.txt
ai-zero/: README.md
containers/: training.Dockerfile
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  install_protobuf.sh  run-clang-tidy.sh  run.sh  setup_build.bat  setup_build.sh
cpp/benchmark/: BenchmarkEvalSearchTree.cpp  DirectInferenceBenchmark.cpp
cpp/cmake/: ApplyPatchOnce.cmake
cpp/eval/: eval.ipynb  eval_setup_build.sh
cpp/patches/: stockfish-bounded-repetition.patch
cpp/src/: AlphaMCTSNode.hpp  AlphaZeroBase.hpp  Barrier.hpp  Board.cpp  Board.h  BoardEncoding.cpp  BoardEncoding.hpp  Dataset.hpp  DirectInference.cpp  DirectInference.hpp  GameHistory.cpp  GameHistory.hpp  InferenceClient.cpp  InferenceClient.hpp  InferenceClientTypes.hpp  InferenceModel.hpp  InferenceResultProcessing.cpp  InferenceResultProcessing.hpp  InteractiveEngine.cpp  InteractiveEngine.hpp  InteractiveSearch.cpp  InteractiveSearch.hpp  MoveEncoding.cpp  MoveEncoding.hpp  MoveEncoding.test.hpp  Network.hpp  NonCachingInferenceClient.cpp  NonCachingInferenceClient.hpp  SelfPlay.hpp  SelfPlayGame.hpp  SelfPlayWriter.hpp  Settings.hpp  StockfishDataGenerator.hpp  Subprocess.hpp  TensorBoardLogger.hpp  TrainingArgs.hpp  TrainingStats.hpp  binding.cpp  chess.hpp  common.cpp  (+5 more)
cpp/src/MCTS/: DirectSelfPlaySearch.cpp  DirectSelfPlaySearch.hpp  EvalMCTS.hpp  EvalMCTSNode.h  EvalSearchTree.cpp  EvalSearchTree.hpp  MCTS.cpp  MCTS.hpp  MCTSNode.cpp  MCTSNode.hpp  NodePool.cpp  NodePool.h  SearchTree.cpp  SearchTree.hpp  VisitCounts.hpp
cpp/src/SelfPlay/: SelfPlay.cpp  SelfPlay.hpp  SelfPlayGame.hpp  SelfPlayWriter.cpp  SelfPlayWriter.hpp
cpp/src/eval/: ModelEvaluation.cpp  ModelEvaluation.hpp
cpp/src/util/: BlockingQueue.hpp  ChunkedList.h  CollisionCheckedCache.hpp  Log.cpp  Log.hpp  ShardedCache.hpp  TensorBoardLogger.hpp  ThreadPool.cpp  ThreadPool.h  Time.cpp  Time.hpp  TimeItGuard.cpp  TimeItGuard.h  py.hpp
cpp/test/: TestBlockingQueue.cpp  TestBoardEncoding.hpp  TestBoardLegalMovesCache.cpp  TestDirectBoardEncoding.cpp  TestDirectInferencePipeline.cpp  TestDirectSelfPlaySearch.cpp  TestEvalMCTSNodeChildren.cpp  TestEvalSearchTree.cpp  TestGameHistory.cpp  TestMoveEncoding.hpp  TestMovePolicyProcessing.cpp  TestSearchTreeArena.cpp  TestShardedCache.cpp
cpp/train/: data_generator.sh  train.sh  train_test.sh
cpp_py/: .gitignore  AlphaZeroCpp.pyi  dataset.sh  dataset_train.sh  eval.py  main.py  requirements.txt  setup.sh  test.py  train.py  train.sh
dataset/: model.h5  nm_games small.csv
docs/: StackOverflowQuestion.md
documentation/: clean-training-run-plan.md  future.md  implementation.md  insights_and_recommendations.md  lichess_vast_evaluation.md  references.md  trainer-rework-roadmap.md  web_play.md
handcrafted/: README.md
neuralnet/: README.md
original/: requirements.txt  training.ipynb
play/: play.py
py/: AlphaZeroCpp.pyi  README.md  README_cpp_py.md  dataset.sh  dataset_train.sh  eval.py  inference_speed_test.py  inference_test.py  inspect_game.py  opt.py  requirements-training.in  requirements-web-modal.txt  requirements-web.txt  requirements.txt  setup.sh  start_tmux.sh  test.py  train.py  train.sh
src/: ai_model.py  nn.py  play.py  preprocessor.py  testing.py  training.py  uniter.py  util.py
training/: weights00000005.h5  weights00000010.h5
(+2233 files in other folders)
